--- a/index.html
+++ b/index.html
@@ -142,20 +142,20 @@ $(document).ready(function () {
 </thead>
 <tbody>
 <tr class="odd">
-<td>Phillies</td>
-<td>Nationnal</td>
+<td>Eagles</td>
+<td>NFC</td>
 </tr>
 <tr class="even">
-<td>Yankees</td>
-<td>American</td>
+<td>Steelers</td>
+<td>AFC</td>
 </tr>
 <tr class="odd">
-<td>Cubs</td>
-<td>National</td>
+<td>Doplhins</td>
+<td>NFC</td>
 </tr>
 <tr class="even">
-<td>Red Sox</td>
-<td>American</td>
+<td>Panthers</td>
+<td>NFC</td>
 </tr>
 </tbody>
 </table>
